--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "installCommand": "npm install",
   "rewrites": [
     {
-      "source": "/((?!assets|images|.*\\..*).*)",
+      "source": "/((?!assets).*)",
       "destination": "/index.html"
     }
   ],
